# pkm_iv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: creature.hpp  creature_enums.hpp  creature_forms.hpp  creature_headers.hpp  gen_iv_base.hpp  hgss_mapping.hpp  item.hpp  personality_value.hpp  ribbons.hpp  sav_file_format.hpp  species.hpp  txt.hpp
src/: creature.cpp  sav_file_format.cpp  species.cpp  text_encoding.cpp  txt.cpp
